--- a/client/css/choose.css
+++ b/client/css/choose.css
@@ -58,25 +58,25 @@
   right: 26px;
 }
 .choose .pickedbox .skills:hover {
-  transform: translate3d(-42%, -68%, 0) scale(1.1);
+  transform: translate3d(-84px, -200px, 0) scale(1.1);
 }
 .choose .pickedbox .slot:first-child .skills:hover {
-  transform: translate3d(-30%, -68%, 0) scale(1.1);
+  transform: translate3d(-60px, -200px, 0) scale(1.1);
 }
 .choose .pickedbox .slot:nth-child(4) .skills:hover {
-  transform: translate3d(-62%, -68%, 0) scale(1.1);
+  transform: translate3d(-124px, -200px, 0) scale(1.1);
 }
 .choose .pickedbox .slot:first-child .skills.zoom {
-  transform: translate3d(20%, -112%, 0) scale(2);
+  transform: translate3d(30px, -336px, 0) scale(2);
 }
 .choose .pickedbox .slot:nth-child(2) .skills.zoom {
-  transform: translate3d(15%, -112%, 0) scale(2);
+  transform: translate3d(30px, -336px, 0) scale(2);
 }
 .choose .pickedbox .slot:nth-child(3) .skills.zoom {
-  transform: translate3d(-30%, -112%, 0) scale(2);
+  transform: translate3d(-60px, -336px, 0) scale(2);
 }
 .choose .pickedbox .slot:nth-child(4) .skills.zoom {
-  transform: translate3d(-108%, -112%, 0) scale(2);
+  transform: translate3d(-216px, -336px, 0) scale(2);
 }
 
 
@@ -137,17 +137,17 @@
   margin: 0px -62px;
   top: 0;
   left: 50%;
-  transform: translate3d(-50%, 0, 0) translateZ(0) scale(0.35);
+  transform: translate3d(-100px, 0, 0) translateZ(0) scale(0.35);
   transition: all 0.18s;
 }
 
 .pickbox .card.selected {
   margin: 0px 16px;
-  transform: translate3d(-50%, 0, 0) scale(1.1);
+  transform: translate3d(-100px, 0, 0) scale(1.1);
 }
 
 .pickbox .card.selected.zoom {
-  transform: translate3d(-58%, 34%, 0) scale(2);
+  transform: translate3d(-100px, 102px, 0px) scale(2);
 }
 
 
@@ -159,14 +159,18 @@
   animation: pickedboxslidedown 0.5s;
   top: 50%;
   left: 50%;
-  transform: translate3d(-50%, -50%, 0) scale(0.6);
+  transform: translate3d(-100px, -150px, 0) scale(0.6);
 }
 
 .library .pickedbox .card {
-  transform: translate3d(-50%, -50%, 0) scale(0.7);
+  transform: translate3d(-100px, -150px, 0) scale(0.7);
 }
-.library .pickedbox.transparent .card {
+
+.library .pickedbox.trans .card {
   pointer-events: none;
+}
+.library .pickedbox.trans .card.zoom {
+  pointer-events: all;
 }
 
 @keyframes pickedboxslidedown {
